test: Organize Benchmarks